# proxmox-mcp-public

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  leak-canary.yml
docs/: api-audit-initial.md
scripts/: scrub-for-public.sh  validate-scrub.sh
src/proxmox_mcp/: __init__.py  access.py  acme.py  apt.py  backups.py  capabilities.py  ceph.py  certificates.py  client.py  cloudinit.py  cluster.py  config.py  console.py  discovery.py  disks.py  exceptions.py  firewall.py  ha.py  hardware.py  lifecycle.py  mapping.py  metrics.py  multi_client.py  networking.py  nodes.py  notifications.py  permissions.py  pools.py  replication.py  sdn.py  server.py  snapshots.py  storage.py  tasks.py  templates.py  utils.py
tests/: conftest.py  test_allowed_commands.py  test_cluster_nodes.py  test_discovery.py  test_infrastructure.py  test_lifecycle.py  test_mcp_server.py  test_multi_node.py  test_permissions.py  test_readonly.py  test_utils.py
